# etching_hpc_sim

./: README.md  main  makefile  pyproject.toml  reference_poetry
src/: c_interface.py  main  main.c  main.py
src/lib/: point_methods.py
test/: test_interp.py
