[project]
name = "etching-hpc-sim"
version = "0.1.0"
description = ""
authors = [
    {name = "Utkarsh",email = "saraswat.utk@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.5.1,<3.0.0)",
    "matplotlib (>=3.11.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
