[tool.poetry]
name = "etching-hpc-sim"
version = "0.1.0"
description = ""
authors = ["Utkarsh <saraswat.utk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.3"
numpy = "^2.5.1"
scipy = "^1.18.0"
matplotlib = "^3.11.0"
fastdtw = "^0.3.4"
pytest = "^9.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
